--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,6 @@ header h1 {
     position: fixed;
     background: url("https://garnettr.github.io/jackson-family-christmas/img/house-large.png") no-repeat;
     background-size: contain;
-    background-position: center;
     margin: initial;
   }
 }
@@ -244,6 +243,7 @@ header h1 {
 
 @media only screen and (min-width: 768px) {
   #family-images div:before {
+    background-image: url("https://garnettr.github.io/jackson-family-christmas/img/wreath-large.png");
     width: 14rem;
     height: 14rem;
   }
